tests/specs/ecosystem/jesubohr/hotkeypad/0_1_2.test
jesubohr/hotkeypad/0.1.2
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
  declare instance: HTMLElement;
                    ~~~~~~~~~~~
    at file://<tmpdir>/src/mod.ts:30:21

